# ros2_go2_rl_demo

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md
docs/: 实现与应用指南.md
ros2_ws/src/go2_rl_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/go2_rl_control/docs/: 实现与应用指南.md
ros2_ws/src/go2_rl_control/launch/: sim.launch.py
ros2_ws/src/go2_rl_control/policy/: policy.onnx
ros2_ws/src/go2_rl_control/scripts/: keyboard_teleop_node.py  mujoco_sim_node.py  refresh_policy.sh  wait_train_then_refresh.sh
ros2_ws/src/go2_rl_control/src/: rl_inference_node.cpp
unitree_rl_lab/: README.md
unitree_rl_lab/scripts/: export_onnx_standalone.py  play_keyboard.py
unitree_rl_lab/tasks/: __init__.py  velocity_gait_terrain_env_cfg.py  velocity_robust_env_cfg.py
